--- a/Lab_02/templates/railfence.html
+++ b/Lab_02/templates/railfence.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caesar Cipher</title>
+    <title>Rail Fence Cipher</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -35,17 +35,17 @@
 </head>
 <body>
     <div class="container">
-        <h2>CAESAR CIPHER</h2>
+        <h2>RAIL FENCE CIPHER</h2>
         
         <h4 class="text-primary">ENCRYPTION</h4>
-        <form method="POST" action="/encrypt">
+        <form method="POST" action="/encrypt_railfence">
             <div class="mb-3">
                 <label class="form-label">Plain text:</label>
                 <input type="text" class="form-control" name="inputPlainText" placeholder="Input Plain Text" required autofocus/>
             </div>
             <div class="mb-3">
-                <label class="form-label">Key:</label>
-                <input type="number" class="form-control" name="inputKeyPlain" placeholder="Input Key" required/>
+                <label class="form-label">Key (Number of Rails):</label>
+                <input type="number" class="form-control" name="inputKeyPlain" placeholder="Input Key" required min="2"/>
             </div>
             <button type="submit" class="btn btn-primary">Encrypt</button>
         </form>
@@ -53,14 +53,14 @@
         <hr>
         
         <h4 class="text-primary">DECRYPTION</h4>
-        <form method="POST" action="/decrypt">
+        <form method="POST" action="/decrypt_railfence">
             <div class="mb-3">
                 <label class="form-label">Cipher text:</label>
                 <input type="text" class="form-control" name="inputCipherText" placeholder="Input Cipher Text" required/>
             </div>
             <div class="mb-3">
-                <label class="form-label">Key:</label>
-                <input type="number" class="form-control" name="inputKeyCipher" placeholder="Input Key" required/>
+                <label class="form-label">Key (Number of Rails):</label>
+                <input type="number" class="form-control" name="inputKeyCipher" placeholder="Input Key" required min="2"/>
             </div>
             <button type="submit" class="btn btn-primary">Decrypt</button>
         </form>
