--- a/Lab_03/ui/ecc.ui
+++ b/Lab_03/ui/ecc.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>905</width>
-    <height>657</height>
+    <width>943</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>30</y>
-      <width>341</width>
+      <x>270</x>
+      <y>20</y>
+      <width>291</width>
       <height>71</height>
      </rect>
     </property>
@@ -31,50 +31,27 @@
      </font>
     </property>
     <property name="text">
-     <string>Caesar Cipher</string>
+     <string>ECC Cipher</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QPushButton" name="btn_generate">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>180</y>
-      <width>131</width>
+      <x>590</x>
+      <y>50</y>
+      <width>171</width>
       <height>41</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
     <property name="text">
-     <string>Plain text</string>
+     <string>Generate Keys</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>290</y>
-      <width>101</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <pointsize>16</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Key</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_4">
-    <property name="geometry">
-     <rect>
-      <x>70</x>
-      <y>380</y>
+      <y>160</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -85,63 +62,71 @@
      </font>
     </property>
     <property name="text">
-     <string>Cipher text</string>
+     <string>Information</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_encrypt">
+   <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>500</y>
-      <width>111</width>
+      <x>70</x>
+      <y>290</y>
+      <width>131</width>
       <height>41</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>16</pointsize>
+     </font>
+    </property>
     <property name="text">
-     <string>Encrypt</string>
+     <string>Signature</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_decrypt">
+   <widget class="QTextEdit" name="txt_info">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>500</y>
+      <x>270</x>
+      <y>150</y>
+      <width>591</width>
+      <height>121</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="txt_sign">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>300</y>
+      <width>591</width>
+      <height>111</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_sign">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>440</y>
       <width>121</width>
       <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>Decrypt</string>
+     <string>Sign</string>
     </property>
    </widget>
-   <widget class="QTextEdit" name="txt_plaintext">
+   <widget class="QPushButton" name="btn_verify">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>180</y>
-      <width>561</width>
-      <height>87</height>
+      <x>640</x>
+      <y>440</y>
+      <width>121</width>
+      <height>41</height>
      </rect>
     </property>
-   </widget>
-   <widget class="QTextEdit" name="txt_ciphertext">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>380</y>
-      <width>561</width>
-      <height>87</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QTextEdit" name="txt_key">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>280</y>
-      <width>181</width>
-      <height>87</height>
-     </rect>
+    <property name="text">
+     <string>Verify</string>
     </property>
    </widget>
   </widget>
@@ -150,7 +135,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>905</width>
+     <width>943</width>
      <height>26</height>
     </rect>
    </property>
